# todo-everything-django

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml-poetry  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  tasks.py
.github/workflows/: lint.yml  main.yml  pull-request.yml  run-tests.yml
docker/: .env.dev  Dockerfile-web  get-poetry.py
docker/local/: Dockerfile-web
docker/local/web/: Dockerfile  Dockerfile-poetry
todo_everything/: db.sqlite3  manage.py  wsgi.py
todo_everything/accounts/: admin.py  api.py  factories.py  managers.py  models.py  serializers.py  signals.py  tasks.py
todo_everything/accounts/fixtures/: initial_users.yaml
todo_everything/accounts/migrations/: 0001_initial.py  0002_accountprofile_created_accountprofile_is_removed_and_more.py  0002_remove_account_first_name_remove_account_last_name.py
todo_everything/apps/accounts/: admin.py  api.py  apps.py  managers.py  models.py  serializers.py
todo_everything/apps/accounts/migrations/: 0001_initial.py  0002_auto_20200112_0636.py
todo_everything/apps/todos/: api.py  apps.py  models.py  serializers.py  views.py
todo_everything/apps/todos/migrations/: 0001_initial.py
todo_everything/mixins/models/: common.py
todo_everything/organizations/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py
todo_everything/organizations/fixtures/: initial_orgs.yaml
todo_everything/organizations/migrations/: 0001_initial.py  0002_alter_organization_options_organizationaccounts_and_more.py  0002_alter_organizationaccounts_unique_together.py  0003_organizationaccounts_role_and_more.py
todo_everything/rmq/: rmq_producer.py
todo_everything/settings/: celery.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py
todo_everything/tests/: conftest.py
todo_everything/tests/accounts/: test_managers.py  test_models.py
todo_everything/tests/accounts/factories/: __init__.py
todo_everything/tests/organizations/: test_api.py
todo_everything/tests/todos/: test_api.py  test_models.py
todo_everything/todo_everything/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
todo_everything/todos/: admin.py  api.py  apps.py  factories.py  models.py  permissions.py  serializers.py  signals.py  tasks.py
todo_everything/todos/migrations/: 0001_initial.py  0002_alter_todo_created_by.py
(+6 files in other folders)
