[tool.poetry]
name = "todo-everything-django"
version = "0.1.0"
description = ""
authors = ["Allan Almazan <allan.almazan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
django-crispy-forms = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest-factoryboy = "^2.0.3"
hypothesis = "^5.5.1"
pre-commit = "^2.0.1"
ipython = "^7.12.0"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
isort = "^4.3.21"
flake8 = "^3.7.9"
doc8 = "^0.8.0"
autopep8 = "^1.5"
pytest = "^5.3.5"
tox-pipenv = "^1.9.0"
pytest-socket = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
