[tool.poetry]
name = "todo-everything-django"
version = "0.1.0"
description = ""
authors = ["Allan Almazan <allan.almazan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.0.3"
django-environ = "^0.11.2"
django-model-utils = "^4.0.0"
django-crispy-forms = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest-factoryboy = "^2.0.3"
hypothesis = "^5.5.1"
pre-commit = "^2.0.1"
ipython = "^7.12.0"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
isort = "^4.3.21"
flake8 = "^3.7.9"
doc8 = "^1.1.1"
autopep8 = "^1.5"
pytest = "^7.4.2"
pytest-socket = "^0.6.0"
model-bakery = "^1.15.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
